优化异常处理器以及sse对跨域中间件的支持